# Learn-CUDA

./: BUILD.md  CMakeLists.txt
.claude/: settings.json
cuda_reduce/: CMakeLists.txt  reduce_v0  reduce_v0_global_memory.cu  reduce_v1_shared_memory.cu  reduce_v2_no_divergence_branch.cu  reduce_v3_no_bank_conflict.cu  reduce_v4_add_during_load.cu  reduce_v5_unroll_last_warp.cu  reduce_v6_completely_unroll.cu  reduce_v7_shuffle.cu
cuda_sgemm/: CMakeLists.txt  compare_metrics.cpp  guidance.md  parameters.h  plot_results.py  random_matrix.cpp  ref_mmult.cpp  sgemm_baseline_cpu.cpp  sgemm_v0_global_memory.cu  test_mmult.cpp
cuda_sgemm/results/: result_v0.txt
kernel_profiling/: CMakeLists.txt  combined_memory_access.cu  combined_memory_nsys.nsys-rep  generate_report.md
